--- a/.github/workflows/Deploy_surge.yml
+++ b/.github/workflows/Deploy_surge.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Insall Node.js
-     - uses: actions/setup-node@v2-b
+     - uses: actions/setup-node@v2-beta
       with:
         node-version: 12
         
