--- a/.github/workflows/Deploy_surge.yml
+++ b/.github/workflows/Deploy_surge.yml
@@ -23,21 +23,21 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Insall Node.js
-     - uses: actions/setup-node@v2-beta
+    - name: Install Node.js
+    - uses: actions/setup-node@v2-beta
       with:
         node-version: 12
         
-     - uses: borales/actions-yarn@v2.0.0
-        with:
+    - uses: borales/actions-yarn@v2.0.0
+      with:
           cmd: install # will run `yarn install` command   
           
-     - name: Build React app
-       run: yarn build
+    - name: Build React app
+      run: yarn build
        
-     - name: Install Surge
-       run: npm install --global surge
+    - name: Install Surge
+      run: npm install --global surge
        
-     - name: Deploy Surge
-       run: surge ./build myapp_waseem.surge.sh --token ${{secrets.SURGE_TOKEN}}
+    - name: Deploy Surge
+      run: surge ./build myapp_waseem.surge.sh --token ${{secrets.SURGE_TOKEN}}
           
