--- a/.github/workflows/Deploy_surge.yml
+++ b/.github/workflows/Deploy_surge.yml
@@ -24,13 +24,13 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Install Node.js
-    - uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2-beta
       with:
-        node-version: 12
+        node-version: 14
         
     - uses: borales/actions-yarn@v2.0.0
       with:
-          cmd: install # will run `yarn install` command   
+        cmd: install # will run `yarn install` command   
           
     - name: Build React app
       run: yarn build
